test/classes/override/override-generic-concrete-missing.good
override-generic-concrete-missing.chpl:13: error: D(int(64)).foo overrides parent class method C.foo but missing override keyword
